--- a/notebooks/ScrapEMAen_2.ipynb
+++ b/notebooks/ScrapEMAen_2.ipynb
@@ -1459,7 +1459,7 @@
       },
       "outputs": [],
       "source": [
-        "ndf = pd.concat([df, df1])"
+        "ndf = pd.merge(df, df1, left_on='name', right_on='Medicine name', how='outer')"
       ]
     },
     {
